<resources>
    <string name="app_name">Week_9</string>
    <string name="signup_but">Register</string>
    <string name="signin_but">Sign In</string>
    <string name="password">Enter Your Password</string>
    <string name="email">Enter Your Email</string>
    <string name="name">Enter Your Name</string>
    <string name="next_button">Next</string>
    <string name="app_title">Sportism</string>
    <string name="signin">Sign In Here</string>
    <string name="signup">Register Here</string>
    <string name="discover">Discover</string>
    <string name="news">Latest Jerseys</string>
    <string name="more">View More</string>
    <string name="devname">Developed By: Sanjay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>