<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/discover"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="147dp"
                android:layout_height="220dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/scroll1_img1">
                    </ImageView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="147dp"
                android:layout_height="220dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/scroll1_img2">
                    </ImageView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="147dp"
                android:layout_height="220dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/scroll1_img3">
                    </ImageView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/white"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/news"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/scroll2_img1"
                        android:scaleType="centerCrop">
                    </ImageView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/scroll2_img3"
                        android:scaleType="centerCrop">
                    </ImageView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/scroll2_img2"
                        android:scaleType="centerCrop">
                    </ImageView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </HorizontalScrollView>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:background="@drawable/transparent_button_with_border"
        android:onClick="signup_button"
        android:layout_marginTop="20dp"
        android:text="@string/more"
        android:textColor="@color/white"
        android:layout_marginStart="90dp"
        android:fontFamily="@font/quicksand_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signin_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669"
        tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>
